--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "todo_list_node",
   "version": "1.0.0",
   "description": "Lista de tarefas feitas com Node.js",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
+    "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "João Carlos Deon <joaocarlosdeon@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "nodemon": "2.0.7"
   }
 }
